06_amq-kind-cluster/amq-plainproducer.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: amq-plainproducer-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: amq-plainproducer
  template:
    metadata:
      labels:
        app: amq-plainproducer
    spec:
      automountServiceAccountToken: false
      containers:
      - name: amq-plainproducer
        image: localhost/amq-plainproducer:1.0.6
        imagePullPolicy: IfNotPresent
        resources:
          limits:
            memory: 100Mi
            ephemeral-storage: "2Gi"
          requests:
            cpu: 0.5
            memory: 100Mi
            ephemeral-storage: "2Gi"
        ports:
        - containerPort: 61616
---
apiVersion: v1
kind: Service
metadata:
  name: amq-plainproducer-service
spec:
  selector:
    app: amq-plainproducer
  ports:
  - protocol: TCP
    port: 61616
    targetPort: 61616
  type: ClusterIP
