06_amq-kind-cluster/amq-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: amq-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: amq-broker-service
            port:
              number: 61616
